# const-linear

./: Cargo.toml  LICENSE  README.MD
src/: lib.rs  traits.rs  utils.rs
src/algebra/: complex.rs  mod.rs  quaternion.rs  unit.rs
src/core/: boxed.rs  imp.rs  iter.rs  matrix.rs  mod.rs
src/geometry/: angle.rs  mod.rs  transform.rs
src/matrix/: mod.rs
